Bug 307288 - Ctrl+h selects the word in the left of the cursor instead the one on the right
Summary: Ctrl+h selects the word in the left of the cursor instead the one on the right
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: unspecified Linux
: VHI major
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-23 20:34 UTC by Albert Astals Cid
Modified: 2013-09-02 07:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2012-09-23 20:34:09 UTC
Seems that only master is affected (or at least can't repro on 4.9.1)

If you have text like

connect( m_pMoleculesviewer, SIGNAL(triggered()), this, SLOT(slotMoleculeviewer()) );

put the cursor in front of the slotMoleculeviewer word (i.e. after 'SLOT(') and press Ctrl+h, it's SLOT the word that will be searched, this is a regression from the usual Ctrl+H behaviour
Comment 1 Dominik Haumann 2012-09-27 06:39:07 UTC
Indeed. Sigh.
Comment 2 Dominik Haumann 2012-10-16 15:11:39 UTC
as reminder: should be fixed before KDE 4.10!
Comment 3 Christoph Cullmann 2012-10-21 11:42:19 UTC
Fixed by reverting Thai patches, see Bug 156561.
Applied that patch after 4.9 was branched, to have more testing, seems testing shows => buggy :/
Comment 4 Weng Xuetian 2013-09-01 06:33:05 UTC
Git commit fdc4aa9c298004ccd397fd2b451065d52cbf1ee0 by Weng Xuetian, on behalf of Alex Levkovich.
Committed on 01/09/2013 at 06:23.
Pushed by xuetianweng into branch 'KDE/4.11'.

Fix shutdown on critical battery level

powerdevil kcontrol and daemon doesn't use consistent value for
action, make them both use same enumeration is more desirable than
plain number.
FIXED-IN: 4.11.2
Reviewed By Weng Xuetian

M  +5    -3    powerdevil/daemon/powerdevilcore.cpp

http://commits.kde.org/kde-workspace/fdc4aa9c298004ccd397fd2b451065d52cbf1ee0
Comment 5 Weng Xuetian 2013-09-01 06:35:42 UTC
... sorry for the noise... I used the wrong bug number on the commit..
Comment 6 Dominik Haumann 2013-09-02 07:31:02 UTC
...it was fixed, though, see comment #3.