Fix shutdown on critical battery level

powerdevil kcontrol and daemon doesn't use consistent value for
action, make them both use same enumeration is more desirable than
plain number.

BUG: 307288
FIXED-IN: 4.11.2
Reviewed By Weng Xuetian